# openstack-bucket-retention

./: Makefile  README.md  pyproject.toml
.github/workflows/: codeql-analysis.yml  flake8.yml  linter.yml  release.yml
openstack_bucket_retention/: cli.py  core.py
tests/: test_openstack_bucket_retention.py
